# pam-synology

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  pam.c
